--- a/style.css
+++ b/style.css
@@ -78,15 +78,17 @@ body {
   max-width: 21.8125rem;
 }
 
-.product {
+.product img {
   max-width: 21.8125rem;
   display: block;
-  border-top-left-radius: inherit;
-  border-top-right-radius: inherit;
+  border-top-left-radius: 0.625rem;
+  border-top-right-radius: 0.625rem;
 }
 
 .content {
   padding: 2rem;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
@@ -151,6 +153,34 @@ button:hover {
 button > p {
   color: var(--clr-White);
   font-weight: 700;
+}
+
+@media (min-width: 780px) {
+  .wrapper {
+    flex-direction: row;
+    justify-content: center;
+    max-width: 33.875rem;
+  }
+  .product img {
+    max-width: 17rem;
+    border-bottom-left-radius: 0.625rem;
+    border-top-right-radius: 0;
+  }
+  .content {
+    padding: 1.75rem;
+    max-width: 17rem;
+    max-height: 25.4375rem;
+  }
+  h1,
+  h2,
+  .description > p,
+  .price {
+    padding-block-end: 1.25rem;
+  }
+  button {
+    width: 13.375rem;
+    height: 3rem;
+  }
 }
 
 .attribution {
